<resources>
    <string name="app_name">Petsaway</string>
    <string name="btn_nuevo_usuario">Nuevo usuario</string>
    <string name="btn_entrar">Entrar</string>
    <string name="hint_usuario">usuario</string>
    <string name="hint_password">contraseña</string>
    <string name="tv_olvidado_contrasenia">¿Has olvidado la contraseña?</string>
    <string name="tv_conectar_con">-o inicia sesión con-</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name User</string>
    <string name="nav_header_subtitle">xxx@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_alerta">Alertas</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_adoptar">Adopta una masota</string>
    <string name="nav_otros">Otros</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_aviso_legal">Aviso legal</string>
    <string name="menu_acerca_de">Acerca de PetsAway</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_chat">Chat</string>
    <string name="tv_home">Home</string>
    <string name="tv_nombre_usuario_header">Nombre de usuario</string>
    <string name="tv_mail_usuario_header">xxxxxx@gmail.com</string>
    <string name="tv_aviso_legal">Aviso Legal</string>
    <string name="tv_aviso_legal_text">PETSAWAY no se hace responsable del uso fraudulento que puedan realizar los usuarios suplantando identidades
        y pertenencias de las mascotas. Compruebe siempre los datos facilitados para asegurarse de a quién se le entrega la mascota o con quién queda.</string>
    <string name="tv_polit_privacidad">Política de Privacidad</string>
    <string name="tv_nom_usuario">Nombre de Usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_slide1_tit">Bienvenido a Petsaway</string>
    <string name="tv_slide1_desc">Te damos la bienvenida a tu nueva aplicación con la que ya no temerás que tu mascota se extravíe, y además con la que podrás conocer a otras personas amantes de las mascotas</string>
    <string name="tv_slide2_desc">Dentro de la aplicación encontrarás diversas funciones como editar perfil, registrar tus mascotas, consultar alertas y noticias, incluso chatear con otros usuarios con mascota</string>
    <string name="tv_slide3_desc">Si encuentras una mascota perdida, trátala con cuidado pues estará asustada. Si sabes qué come puedes darle su comida, si no, puedes buscar en internet o consultar a un veterinario</string>
    <string name="tv_slide2_tit">Conoce todas las funciones</string>
    <string name="tv_slide3_tit">Para finalizar</string>
    <string name="tv_email_usuario">Email</string>
    <string name="tv_ciudad_usuario">Ciudad</string>
    <string name="tv_mascotas_usuario">Añadir Mascotas\t</string>
    <string name="btn_editar_perfil">Edit Profile</string>
    <string name="tv_aclaracion_perfil">(Pulsa para añadir, editar o borrar)</string>
    <string name="title_activity_maps">Map</string>
    <string name="h_menu_search">Buscar</string>
    <string name="mascEncontradas">Encuentra</string>
    <string name="mascBuscadas">Busca</string>
    <string name="h_tipo_alerta">Tipo de alerta: </string>
    <string name="h_tipo_animal">Tipo de animal: </string>
    <string name="h_color">Color de mascota: </string>
    <string name="h_fecha_p_e">Fecha de Pérdida/Encuentro</string>
    <string name="h_raza">Raza de mascota: </string>
    <string name="bt_guardar">Guardar</string>
    <string name="h_desc">Descripción: </string>
    <string name="hint_mail">email</string>
    <string name="btn_crear_cuenta">Crear cuenta</string>
    <string name="toast_faltanDatos">Faltan Datos</string>
    <string name="toast_registro_correcto">¡Registrado!</string>
    <string name="toast_msj_no_datos">Debes rellenar todos los campos</string>
    <string name="toast_user_no_registrado">No se ha podido realizar el registro</string>
    <string name="toast_error_acceso">Error de acceso</string>
    <string name="maarker_encontrado">encontrado</string>
    <string name="msjBtDialogImage">Elige</string>
    <string name="encontrados">Encontrados</string>
    <string name="encontrado">encontrado</string>
    <string name="buscado">buscado</string>
    <string name="modTema">Modificar el tema</string>
    <string name="modPass">Cambiar contraseña</string>
    <string name="modEmail">Cambiar correo electronico</string>
    <string name="modFondoChat">Modificar fondo del chat</string>
    <string name="invitAm">Invitar amigos</string>
    <string name="borrarCuenta">Borrar mi cuenta</string>
    <string name="notif">Notificaciones</string>
    <string name="toast_recuperar_password">Debes introducir tu email</string>
    <string name="tv_reset_contrasenia">Te enviaremos un E-mail a tu cuenta de correo electrónico para restablecer tu contraseña</string>
    <string name="toast_revisa_email">¡Revisa tu correo!</string>
    <string name="toast_error_envio_correo">Se ha producido un error</string>
    <string name="toast_bienvenida">Bienvenid@ Te recomendamos rellenar y personalizar tu perfil</string>
    <string name="hint_nombre_mascota">*Nombre de la mascota</string>
    <string name="tv_aniadir_mascota">Añadir Mascota</string>
    <string name="hint_especie_mascota">*Otro (serpiente, cerdo, etc.)</string>
    <string name="hint_raza_mascota">Raza (bull dog, persa, cotorra del sol)</string>
    <string name="hint_color_mascota">*Color o colores principales</string>
    <string name="hint_identificacion_mascota">Nº de identificación (chip, anilla, etc.)</string>
    <string name="hint_fechaNac_mascota">*Fecha de nacimiento (ejemplo 12/05/2020)</string>
    <string name="hint_descripcion_mascota">Descripción o comentarios</string>
    <string name="btn_guardar_mascA">Guarda tu Mascota</string>
    <string name="btn_cancelar_mascA">Cancelar</string>
    <string name="toast_datos_vacios_m">Debes rellenar los campos con asterisco</string>
    <string name="toast_guardado_ok">Se han guardado los datos de la mascota correctamente</string>
    <string name="btn_agregar_mascota">Agregar Mascota</string>
    <string name="btn_guardar_cambios">Guardar Cambios</string>
    <string name="btn_cambiar_foto">Cambiar Foto</string>
    <string name="toast_datos_vacios">Se deben rellenar los datos</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="hint_pass_ant">Anterior %1$s</string>
    <string name="hint_pass_new">Nuev</string>
    <string name="hint_pass_new_rep">Repite tu nuev</string>
    <string name="msg_cancel">Los cambios no se han guardado</string>
    <string name="msg_wrongPass">La contraseña antigua no es correcta</string>
    <string name="msg_newPass">Contraseña actualizada correctamente</string>
    <string name="msg_newPassDist">La contraseña debe coincidir</string>
    <string name="msg_newEmailDist">El email debe coincidir</string>
    <string name="msg_newEmail">Email actualizado correctamente</string>
    <string name="msg_wrongEmail">El email antiguo no es correcto</string>
    <string name="toast_msj_error_datos_registro">Email o contraseña inválido</string>
    <string name="mensaje_chat_visto">Visto</string>
    <string name="mensaje_chat_enviado">Enviado</string>
    <string name="mensaje_chat_vacio">No puedes enviar un mensaje vacío</string>
    <string name="msg_error_enviar_notif">¡Ha fallado!</string>
    <string name="texto_acerca_de">PetsAway es una marca creada y registrada por un grupo de cuatro alumnos de la Universidad Europea de Madrid.
    Con ella queremos acercar a todos los propietarios de cualquier tipo de mascota de una manera rápida, dinámica y sencilla.
    A través de sus diferentes funciones, nuestro objetivo es desarrollar una comunicación entre todos los usuarios mediante el chat del que dispone nuestra App.
    Además de las diferentes opciones entre las que disponemos de un innovador servicio de alertas personalizadas o o la posibilidad de compartir este servicio con cualquier persona.
    El usuario tiene a su disposición un servicio de alerta en caso de pérdida de su mascota.</string>
    <string name="texto_inferior_acerca_de">Madrid (España) PetsAway  petsawaypfc@gmail.com</string>
    <string name="toast_msj_error_google">ERROR al acceder a tu cuenta de Google</string>
    <string name="btn_subir_fotoM">Subir Imagen</string>
    <string name="rdbtn_macho">Macho</string>
    <string name="rdbtn_hembra">Hembra</string>
    <string name="tv_modif_mascota">Modificar Mascota</string>
    <string name="btn_cambiar_fotoM">Subir nueva imagen</string>
    <string name="btn_eliminar_mascA">Eliminar Mascota</string>
    <string name="btn_cancelar_mascM">Cancelar y Volver</string>
    <string name="btn_guardar_mascM">Guardar Cambios</string>
    <string name="tx_detalle_verEnMapa">Ver en el mapa</string>
    <string name="tv_fecha_nac_mascota">Nacimiento:</string>
    <string name="tv_color">Color:</string>
    <string name="tv_especie">Especie:</string>
    <string name="toast_cambios_ok">¡Guardado!</string>
    <string name="toast_foto_guardada">¡Guardada!</string>
    <string name="btn_recuperar_contrasenia">Recuperar contraseña</string>
    <string name="toast_eliminar_mascota_ok">¡Eliminada!</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_twitter">Twitter</string>
    <string name="toast_puntoMap">Pulsa sobre el mapa para elegir la ubicación</string>
    <string name="h_edad">Fecha de nacimiento: </string>
    <string name="h_nombre">Nombre de mascota: </string>
    <string name="msjDialogborrarCuenta">¿Seguro que deseas eliminar la cuenta?</string>
    <string name="msjBtDialogSI">Sí, seguro</string>
    <string name="msjBtDialogNo">Cancelar</string>
    <string name="tx_bt_abrir_chat">Abrir chat</string>
    <string name="msjDialogBorrarAlerta">¿Seguro que deseas eliminar la alerta?</string>
    <string name="tv_bienvenida_alertas">Últimas Alertas</string>
    <string name="tv_aclaracion_alertas">(pulsa sobre el botón para añadir una alerta)</string>
    <string name="tv_tipo_alerta">perdido</string>
    <string name="tv_tipo_alerta_enc">encontrado</string>
    <string name="btn_contacto">Contacto</string>
    <string name="btn_mascota_encontrada">Mascotas perdidas</string>
    <string name="btn_mascota_perdida">Mascotas encontradas</string>
    <string name="tv_bienvenida">Bienvenido a Petsaway</string>
    <string name="tv_texto_inicio">¡La aplicación de tus mascotas!</string>
    <string name="tv_contenido">Contenido</string>
    <string name="tv_alertas">Alertas</string>
    <string name="tv_adopciones">Adopciones</string>
    <string name="tv_bienvenida_adopcion">Adopciones</string>
    <string name="tv_aclaracion_adopciones">(pulsa sobre el botón para añadir una adopción)</string>
    <string name="n_raza">Correo de contacto:</string>
    <string name="tv_bienvenida_ajustes">Configuración</string>
    <string name="tv_activity_agregar">Registro de mascotas</string>
    <string name="tv_activity_modificar">Modifica tu mascota</string>
    <string name="tx_alertas">Encuentralo</string>
    <string name="tx_adopta">Adoptalo</string>
    <string name="texto_inferior_home">PETSAWAY</string>
    <string name="tv_fecha_publicacion">Fecha de publicación:</string>
</resources>