<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_user_menu"
            android:title="@string/menu_perfil"/>

        <item
            android:id="@+id/nav_alerta"
            android:icon="@drawable/ic_alerta_menu"
            android:title="@string/menu_alerta" />


        <item
            android:id="@+id/nav_adoptar"
            android:icon="@drawable/ic_adopcion_menu"
            android:title="@string/menu_adoptar" />

        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_noticias_menu"
            android:title="@string/menu_noticias" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_menu2"
            android:title="@string/menu_chat" />

        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_twitter_menu"
            android:title="@string/menu_twitter" />

        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_ajustes_menu"
            android:title="@string/menu_ajustes" />

    </group>

    <item android:title="@string/nav_otros">
        <menu>

            <item
                android:id="@+id/nav_aviso_legal"
                android:icon="@drawable/ic_aviso_legal"
                android:title="@string/menu_aviso_legal" />

            <item
                android:id="@+id/nav_acerca_de"
                android:icon="@drawable/ic_logo_menu"
                android:title="@string/menu_acerca_de" />

            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_salir_menu"
                android:title="@string/menu_salir" />

        </menu>
    </item>

</menu>
