<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorBlanco"
    android:clickable="true"
    tools:context=".perfil_usuario.AniadirMascota">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_aniadir_mascota"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/violetaDeep"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivMascAa"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAdd" />

        <EditText
            android:id="@+id/etNomMascAa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_nombre_mascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMascAa" />

        <Spinner
            android:id="@+id/spinnerEspeciesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNomMascAa"/>

        <EditText
            android:id="@+id/etTipoMascAa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:visibility="invisible"
            android:hint="@string/hint_especie_mascota"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinnerEspeciesa"
            app:layout_constraintTop_toBottomOf="@+id/etNomMascAa" />
        <EditText
            android:id="@+id/etRazaMascAa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_raza_mascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEspeciesa" />
        <EditText
            android:id="@+id/etColorMascAa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_color_mascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRazaMascAa" />
        <EditText
            android:id="@+id/etIdMascAa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_identificacion_mascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etColorMascAa" />
        <EditText
            android:id="@+id/etFechaMascAa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:hint="@string/hint_fechaNac_mascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etIdMascAa" />
        <EditText
            android:id="@+id/etDescMascAa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_descripcion_mascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFechaMascAa" />

        <Button
            android:id="@+id/btnGuardarMascAa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar_mascA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCancelarMascAa"/>
        <Button
            android:id="@+id/btnCancelarMascAa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar_mascA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnGuardarMascAa" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>